--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "@edgestore/react": "^0.1.6",
     "@edgestore/server": "^0.1.6",
     "@nextui-org/input": "^2.1.21",
-    "@radix-ui/react-label": "^2.0.2",
-    "class-variance-authority": "^0.7.0",
+    "axios": "^1.4.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
@@ -22,7 +21,6 @@
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.6"
   },
   "devDependencies": {
